ADD: Design: HW specification

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -992,9 +992,65 @@ publisher={ImageMagick},
 %
 @misc{Magick++Docs,
 title={Magick++ | Documentation},
-url={https://www.imagemagick.org/Magick++/Documentation.html}
+url={https://www.imagemagick.org/Magick++/Documentation.html},
 publisher={ImageMagick},
   note={accessed: 2021-12-10}
+}
+%
+@misc{rasp-specs,
+title={Raspberry Pi 4 Tech Specs},
+url={https://www.raspberrypi.com/products/raspberry-pi-4-model-b/specifications/},
+publisher={Raspberry Pi},
+  note={accessed: 2021-12-11}
+}
+%
+@misc{sensor,
+title={How HC-SR04 Ultrasonic Sensor Works \& Interface It With Arduino},
+url={https://lastminuteengineers.com/arduino-sr04-ultrasonic-sensor-tutorial/},
+publisher={Last Minute Engineers},
+note={accessed: 2021-12-11}
+}
+%
+@misc{camera-module,
+title={Raspberry Pi Camera Module 2},
+url={https://www.raspberrypi.com/products/camera-module-v2/},
+publisher={Raspberry Pi},
+note={accessed: 2021-12-11}
+}
+%
+@misc{fragrance-module,
+title={Micro USB Ultrasonic Atomizing Humidifier Module Fogger Mist Generator UK},
+url={https://www.ebay.co.uk/itm/203635455945?hash=item2f699e77c9:g:j-cAAOSwE75hVti0},
+publisher={hode_shop},
+note={accessed: 2021-12-11}
+}
+%
+@misc{screen,
+title={10.1 Inch HDMI Screen LCD Display With Audio Driver Board Monitor for Raspberry Pi Banana/Orange Pi Mini Computer},
+url={https://www.aliexpress.com/item/33005274109.html?spm=a2g0o.detail.1000013.3.38072ea5MrfWq9&gps-id=pcDetailBottomMoreThisSeller&scm=1007.13339.169870.0&scm_id=1007.13339.169870.0&scm-url=1007.13339.169870.0&pvid=e1784609-f2f3-4547-9d9e-d5461fddc4c8&_t=gps-id:pcDetailBottomMoreThisSeller,scm-url:1007.13339.169870.0,pvid:e1784609-f2f3-4547-9d9e-d5461fddc4c8,tpp_buckets:668%232846%238110%231995&&pdp_ext_f=%7B"sceneId":"3339","sku_id":"12000023440173741"%7D},
+publisher={Shop4049095 Store},
+note={accessed: 2021-12-11}
+}
+%
+@misc{passive-speaker,
+title={Passive vs. Active Speakers, Which is Right for You?},
+url={https://www.aperionaudio.com/blogs/aperion-audio-blog/passive-vs-active-speakers},
+publisher={Jason Hicks},
+note={accessed: 2021-12-11}
+}
+%
+@misc{speakers,
+title={5W SPEAKER - PARA DISPLAY (H)},
+url={https://www.botnroll.com/pt/colunas-sirenes/2726-5w-speaker-para-display-h.html},
+publisher={Bot'N'Roll},
+note={accessed: 2021-12-11}
+}
+%
+@misc{power-supply,
+title={Carregador 4x USB 5V / 2,4A (Branco) - FONESTAR},
+url={https://www.castroelectronica.pt/product/carregador-4x-usb-5v-24a-branco--fonestar},
+publisher={Castro Eletrónica},
+note={accessed: 2021-12-11}
 }
 % +++++++++++++++++++++++  END ==============================
 
