--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -187,4 +187,9 @@
 \newacronym{json}{JSON}{Javascript Object Notation}
 \newacronym{url}{URL}{Uniform Resource Locator}
 \newacronym{lsb}{LSB}{Least Significant Bit}
+\newacronym{gpio}{GPIO}{General Purpose Input/Output}
+\newacronym{hdmi}{HDMI}{High-Definition Multimedia Interface}
+\newacronym{poe}{PoE}{Power over Ethernet}
+\newacronym{ma}{mA}{miliAmpere}
+\newacronym{ttl}{TTL}{Transistor-Transistor Logic}
 % ========================== END ======================
