--- a/Proj/report/dissertation.tex
+++ b/Proj/report/dissertation.tex
@@ -110,15 +110,15 @@
   \listoffigures%
   \cleardoublepage%
   % List of Tables
-%  \phantomsection%
-%  \addcontentsline{toc}{chapter}{List of Tables}
-%  \listoftables
-%  \cleardoublepage%
-  % List of listings
-%  \phantomsection%
-%  \addcontentsline{toc}{chapter}{List of Listings}
-%  \lstlistoflistings%
-%  \cleardoublepage%
+  \phantomsection%
+  \addcontentsline{toc}{chapter}{List of Tables}
+  \listoftables
+  \cleardoublepage%
+ % List of listings
+  \phantomsection%
+  \addcontentsline{toc}{chapter}{List of Listings}
+  \lstlistoflistings%
+  \cleardoublepage%
   %list of Acronyms
   \phantomsection%
   \addcontentsline{toc}{chapter}{List of Abbreviations}
@@ -151,17 +151,17 @@
   %% 1,5 line spacing
   \renewcommand{\baselinestretch}{1.5}
 %
-  \include{./tex/Chap/1-Intro/INTRO}
-  \setcounter{table}{0}
-  \setcounter{figure}{0}
-%
-  \include{./tex/Chap/2-Analysis/ANALYSIS}
-\setcounter{table}{0}
-\setcounter{figure}{0}
-%%
-\include{./tex/Chap/3-Theor-Found/THEOR-FOUND}
-\setcounter{table}{0}
-\setcounter{figure}{0}
+%   \include{./tex/Chap/1-Intro/INTRO}
+%   \setcounter{table}{0}
+%   \setcounter{figure}{0}
+% %
+%   \include{./tex/Chap/2-Analysis/ANALYSIS}
+% \setcounter{table}{0}
+% \setcounter{figure}{0}
+% %%
+% \include{./tex/Chap/3-Theor-Found/THEOR-FOUND}
+% \setcounter{table}{0}
+% \setcounter{figure}{0}
 %%
 \include{./tex/Chap/4-Design/DESIGN}
 \setcounter{table}{0}
