--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -190,6 +190,6 @@
 \newacronym{gpio}{GPIO}{General Purpose Input/Output}
 \newacronym{hdmi}{HDMI}{High-Definition Multimedia Interface}
 \newacronym{poe}{PoE}{Power over Ethernet}
-\newacronym{ma}{mA}{miliAmpere}
+\newacronym{ma}{mA}{milliampere}
 \newacronym{ttl}{TTL}{Transistor-Transistor Logic}
 % ========================== END ======================
