--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -379,7 +379,6 @@ Design Phase must include (some specifications may vary according to your projec
 
 It is compulsory to show/identify which/where all class topics are going to be implemented and used by you! Also third-party Libraries/apps must be identified so you can use other's software and materials with our consent. 
 
-
 * Diagrams
 Diagrams can be drawn using [2/2]:
 - [X] draw.io
@@ -1704,7 +1703,162 @@ database "MySql" {
 
   #+RESULTS:
   [[file:diags/plantuml/component-diag/output/group-components.png]]
+**** Full example
+  #+BEGIN_SRC plantuml :file diags/plantuml/component-diag/output/full-example.png
+@startuml
+
+[First component]
+[Another component] as Comp2
+component Comp3
+component [Last\ncomponent] as Comp4
+
+ interface "Data Access" as DA
+
+ DA - [First Component]
+ [First Component] ..> HTTP : use
+
+
+package "Some Group" {
+  HTTP - [First Component]
+  [Another Component]
+}
+
+node "Other Groups" {
+  FTP - [Second Component]
+  [First Component] --> FTP
+}
+
+cloud {
+  [Example 1]
+}
+
+database "MySql" {
+  folder "This is my folder" {
+    [Folder 3]
+  }
+  frame "Foo" {
+    [Frame 4]
+  }
+}
+
+[Another Component] --> [Example 1]
+[Example 1] --> [Folder 3]
+[Folder 3] --> [Frame 4]
+
+@enduml
+  #+END_SRC
+
+  #+RESULTS:
+  [[file:diags/plantuml/component-diag/output/full-example.png]]
+
 **** Mine (to generate report)                                    :Important:
+You can use several keywords to group components and interfaces together:
+1) package
+2) node
+3) folder
+4) frame
+5) cloud
+6) database
+
+  #+BEGIN_SRC plantuml :file diags/plantuml/component-diag/output/component-diag.png
+@startuml
+''left to right direction
+skinparam fixCircleLabelOverlapping true
+''skinparam linetype ortho
+''[First component]
+''[Another component] as Comp2
+''component Comp3
+''component [Last\ncomponent] as Comp4
+''
+'' interface "Data Access" as DA
+''
+'' DA - [First Component]
+'' [First Component] ..> HTTP : use
+
+''node "Other Groups" {
+''  () FTP - [Second Component]
+''  [First Component] --> FTP
+''}
+''
+''cloud {
+''  [Example 1]
+''}
+''
+''database "MySql" {
+''  folder "This is my folder" {
+''    [Folder 3]
+''  }
+''  frame "Foo" {
+''    [Frame 4]
+''  }
+''}
+
+'' participants definition
+actor "Brand/Admin" as User
+
+package "MDO-RC" {
+  ''HTTP - [UI]
+  [UI]
+  [UI \nEngine] as UIE
+  frame "DB Manager" as DBM{
+  [Query\nParser] as QP
+  [Response\nParser] as RP
+  }
+  frame "Comm Manager" as CM{
+  [Comm \nStatus] as RCS
+  [RC\nTx] as RCT
+  [RC\nRx] as RCR
+  }
+}
+
+package "MDO-RS"{
+  ''HTTP - [UI]
+  [CLI]
+  ''[UI Engine] as UIE
+  ''[Parser]
+  ''[DB Manager] as DBM
+  ''[Comm Manager] as CM
+  frame "Comm Manager" as CMS{
+  [Comm \nStatus] as RSS
+  [RS Tx \nCli] as RSTC
+  [RS Rx \nCli] as RSRC
+  [RS Tx \nLoc] as RSTL
+  [RS Rx \nLoc] as RSRL
+  }
+}
+'' ------------------------------
+
+'' ----------- INTERFACES
+() "tcp/ip" as sockRC_RS
+() "tcp/ip" as sockRS_RC
+() "tcp/ip" as sockRS_L
+() "tcp/ip" as sockL_RS
+() "tcp/ip" as sockL_Twitter
+() "tcp/ip" as sockL_Transfer_sh
+
+'' ----------- INTERACTIONS
+'' MDO-RC
+[User] ..> [UI]: presses
+[UI] .> [User]: feedback
+[UI] --> [UIE]: UI events
+[UIE] --> [UI]: updates
+[UIE] --> [QP]: build db \nquery
+[UIE] --> [RCS]: status
+[RCS] --> [UIE]: status
+[RCS] --> [RCT]: ping
+[QP] --> [UIE]: status
+[QP] --> [RCT]: db query \nframe
+[RCR] ..> [RP]: db response \nframe
+[RP] --> [UIE]: db response
+'' MDO-RS
+[RCT] ..> sockRC_RS
+sockRC_RS ..> [RSRC]: send db \nquery frame
+
+@enduml
+  #+END_SRC
+
+  #+RESULTS:
+  [[file:diags/plantuml/component-diag/output/component-diag.png]]
 
 *** Deployment diagrams
 In UML, deployment diagrams model the physical architecture of a system. Deployment diagrams show the relationships between the software and hardware components in the system and the physical distribution of the processing.
