ADD: Design: Hardware Pinout Mapping

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -1052,5 +1052,12 @@ url={https://www.castroelectronica.pt/product/carregador-4x-usb-5v-24a-branco--f
 publisher={Castro Eletrónica},
 note={accessed: 2021-12-11}
 }
+%
+@misc{raspberry-pinout,
+title={Raspberry Pi 4 Pinout},
+url={https://www.the-diy-life.com/raspberry-pi-4-pinout/},
+publisher={The DIY Life},
+note={accessed: 2021-12-13}
+}
 % +++++++++++++++++++++++  END ==============================
 
