--- a/Proj/readme.org
+++ b/Proj/readme.org
@@ -2479,83 +2479,427 @@ class Flight {
    #+RESULTS:
    [[file:diags/plantuml/class-diag/output/add-methods.png]]
 
+**** Defining visibility
+When you define methods or fields, you can use characters to define the
+visibility of the corresponding item: 
+1) - : private
+2) # : protected
+3) ~ : package private
+4) + : public 
+
+   #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/def-visibility.png
+@startuml
+'' 
+'' 1) - : private
+'' 2) # : protected
+'' 3) ~ : package private
+'' 4) + : public 
+
+'' remove attributes and methods icons
+skinparam classAttributeIconSize 0
+class Dummy {
+ -field1
+ #field2
+ ~method1()
+ +method2()
+}
+
+@enduml
+   #+END_SRC
+
+   #+RESULTS:
+   [[file:diags/plantuml/class-diag/output/def-visibility.png]]
+
+**** Abstract and Static
+You can define static or abstract methods or fields using the {static} or
+{abstract} modifier.
+- These modifiers can be used at the start or at the end of the line.
+
+   #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/abstract-static.png
+@startuml
+class Dummy {
+  {static} String id
+  {abstract} void methods()
+}
+@enduml
+   #+END_SRC
+
+   #+RESULTS:
+   [[file:diags/plantuml/class-diag/output/abstract-static.png]]
+
+**** Hide/show elements
+You can parameterize the display of classes using the hide/show command.
+
+The basic command is: hide empty members. This command will hide attributes or methods if they are empty.
+
+Instead of empty members, you can use:
+- empty fields or empty attributes for empty fields,
+- empty methods for empty methods,
+- fields or attributes which will hide fields, even if they are described,
+- methods which will hide methods, even if they are described,
+- members which will hide fields and methods, even if they are described,
+- circle for the circled character in front of class name,
+- stereotype for the stereotype.
+
+You can also provide, just after the hide or show keyword:
+- class for all classes,
+- interface for all interfaces,
+- enum for all enums,
+- <<foo1>> for classes which are stereotyped with foo1,
+- an existing class name.
+
+You can use several show/hide commands to define rules and exceptions.
+
+You can also use the show/hide commands to hide classes.
+- This may be useful if you define a large !included file, and if you want to
+  hide some classes after file inclusion. 
+
+   #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/hide-show.png
+@startuml
+
+class Dummy1 {
+  +myMethods()
+}
+
+class Dummy2 {
+  +hiddenMethod()
+}
+
+class Dummy3 <<Serializable>> {
+String name
+}
+
+hide members
+hide <<Serializable>> circle
+show Dummy1 methods
+show <<Serializable>> fields
+
+
+class Foo1
+class Foo2
+Foo2 *-- Foo1
+hide Foo2
+
+@enduml
+   #+END_SRC
+
+   #+RESULTS:
+   [[file:diags/plantuml/class-diag/output/hide-show.png]]
+
+**** Specific spot
+Usually, a spotted character (C, I, E or A) is used for classes, interface, enum and abstract classes.
+
+But you can define your own spot for a class when you define the stereotype,
+adding a single character and a color, like in this example: 
+
+   #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/specific-spot.png
+@startuml
+
+class System << (S,#FF7700) Singleton >>
+class Date << (D,orchid) >>
+@enduml
+   #+END_SRC
+
+   #+RESULTS:
+   [[file:diags/plantuml/class-diag/output/specific-spot.png]]
+
+**** Changing arrows orientation
+By default, links between classes have two dashes -- and are vertically
+oriented.
+- It is possible to use horizontal link by putting a single dash (or dot).  
+- You can also change directions by reversing the link.
+
+   #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/arrows-orientation.png
+Room o- Student
+Room *-- Chair
+
+Students -o Rooms
+Chairs --* Rooms
+
+   #+END_SRC
+
+   #+RESULTS:
+   [[file:diags/plantuml/class-diag/output/arrows-orientation.png]]
+
+**** Help on layout
+Sometimes, the default layout is not perfect...
+
+You can use together keyword to group some classes together : the layout engine will try to group them (as if they were in the same package).
+
+You can also use hidden links to force the layout. 
+
+   #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/layout-help.png
+@startuml
+
+class Bar1
+class Bar2
+together {
+  class Together1
+  class Together2
+  class Together3
+}
+Together1 - Together2
+Together2 - Together3
+Together2 -[hidden]--> Bar1
+Bar1 -[hidden]> Bar2
+
+
+@enduml
+   #+END_SRC
+
+   #+RESULTS:
+   [[file:diags/plantuml/class-diag/output/layout-help.png]]
+
+**** Splitting large files
+Sometimes, you will get some very large image files.
+
+You can use the page (hpages)x(vpages) command to split the generated image into several files :
+
+hpages is a number that indicated the number of horizontal pages, and vpages is a number that indicated the number of vertical pages.
+
+You can also use some specific skinparam settings to put borders on splitted
+pages (see example). 
+
+   #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/split-pages.png
+@startuml
+' Split into 4 pages
+page 2x2
+skinparam pageMargin 10
+skinparam pageExternalColor gray
+skinparam pageBorderColor black
+
+class BaseClass
+
+namespace net.dummy #DDDDDD {
+    .BaseClass <|-- Person
+    Meeting o-- Person
+
+    .BaseClass <|- Meeting
+
+}
+
+namespace net.foo {
+  net.dummy.Person  <|- Person
+  .BaseClass <|-- Person
+
+  net.dummy.Meeting o-- Person
+}
+
+BaseClass <|-- net.unused.Person
+@enduml
+   #+END_SRC
+
+   #+RESULTS:
+   [[file:diags/plantuml/class-diag/output/split-pages.png]]
+
+**** Extends and implements
+   #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/extends-implements.png
+@startuml
+class ArrayList implements List
+class ArrayList extends AbstractList
+@enduml
+   #+END_SRC
+
+   #+RESULTS:
+   [[file:diags/plantuml/class-diag/output/extends-implements.png]]
+
+**** Linking or arrow style
+   #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/link-arrow-style.png
+@startuml
+title Bracketed line style mix
+class foo
+class bar
+bar1 : [#red,thickness=1]
+bar2 : [#red,dashed,thickness=2]
+bar3 : [#green,dashed,thickness=4]
+bar4 : [#blue,dotted,thickness=8]
+bar5 : [#blue,plain,thickness=16]
+
+foo --> bar                             : ∅
+foo -[#red,thickness=1]-> bar1          : [#red,1]
+foo -[#red,dashed,thickness=2]-> bar2   : [#red,dashed,2]
+foo -[#green,dashed,thickness=4]-> bar3 : [#green,dashed,4]
+foo -[#blue,dotted,thickness=8]-> bar4  : [blue,dotted,8]
+foo -[#blue,plain,thickness=16]-> bar5  : [blue,plain,16]
+@enduml
+   #+END_SRC
+
+   #+RESULTS:
+   [[file:diags/plantuml/class-diag/output/link-arrow-style.png]]
+
+
+
+**** All together
+   #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/all-together.png
+@startuml
+'' -------------------- Splitting into several files -----------
+page 2x2
+skinparam pageMargin 10
+skinparam pageExternalColor gray
+skinparam pageBorderColor black
+
+class BaseClass
+
+namespace net.dummy #DDDDDD {
+    .BaseClass <|-- Person
+    Meeting o-- Person
+
+    .BaseClass <|- Meeting
+
+}
+
+namespace net.foo {
+  net.dummy.Person  <|- Person
+  .BaseClass <|-- Person
+
+  net.dummy.Meeting o-- Person
+}
+
+BaseClass <|-- net.unused.Person
+'' -------------------------------------------------------------
+
+'' ------------- Link or arrow style ------------------------
+title Bracketed line style mix
+class foo
+class bar
+bar1 : [#red,thickness=1]
+bar2 : [#red,dashed,thickness=2]
+bar3 : [#green,dashed,thickness=4]
+bar4 : [#blue,dotted,thickness=8]
+bar5 : [#blue,plain,thickness=16]
+
+foo --> bar                             : ∅
+foo -[#red,thickness=1]-> bar1          : [#red,1]
+foo -[#red,dashed,thickness=2]-> bar2   : [#red,dashed,2]
+foo -[#green,dashed,thickness=4]-> bar3 : [#green,dashed,4]
+foo -[#blue,dotted,thickness=8]-> bar4  : [blue,dotted,8]
+foo -[#blue,plain,thickness=16]-> bar5  : [blue,plain,16]
+'' -------------------------------------------------------------
+
+'' ------- defining elements --------
+abstract        abstract
+abstract class  "abstract class"
+annotation      annotation
+circle          circle
+()              circle_short_form
+class           class
+diamond         diamond
+<>              diamond_short_form
+entity          entity
+enum            enum
+interface       interface
+''structure struct
+class structName << struct >>
+'' ------------------------------
+
+'' ---------- Relation between classes -----------
+'' Types
+'' - extension (inheritance):   <|--
+'' - composition: *--
+'' - Aggregation: o--
+'' To have a dotted line, replace -- by ..
+'' relation syntax
+''  <C1Name> "<cardC1>" <relation> "<cardC2>" <C2Name> : <label>
+Class01 "1" *-- "many" Class02 : contains
+Class03 o-- Class04 : aggregation
+Class05 --> "1" Class06
+'' --------------------------------------
+
+'' -------------- Scope ---------------
+'' 
+'' 1) - : private
+'' 2) # : protected
+'' 3) ~ : package private
+'' 4) + : public 
+'' remove attributes and methods icons
+skinparam classAttributeIconSize 0
+class Dummy {
+ -field1
+ #field2
+ ~method1()
+ +method2()
+}
+
+'' hide classes if output too long
+class Foo2
+hide Foo2
+'' --------------------------------------
+
+'' -------------- Specific spot -----------
+class System << (S,#FF7700) Singleton >>
+class Date << (D,orchid) >>
+'' --------------------------------------
+
+class ArrayList implements List
+class ArrayList extends AbstractList
+@enduml
+   #+END_SRC
+
+   #+RESULTS:
+   [[file:diags/plantuml/class-diag/output/all-together.png]]
 
 **** Mine (to generate report)
 
 *Client*
-  #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/component-diag-rc.png
+  #+BEGIN_SRC plantuml :file diags/plantuml/class-diag/output/class-diag-rc.png
 @startuml
-''left to right direction
-skinparam fixCircleLabelOverlapping true
-'' participants definition
-actor "Brand/Admin" as User
+'' -------------------- Splitting into several files -----------
+page 2x2
+skinparam pageMargin 10
+skinparam pageExternalColor gray
+skinparam pageBorderColor black
+'' --------------------------------------------------------------
 
-package "MDO-RC: AppManager" {
-  ''HTTP - [UI]
-  ''[  UI\n << Qt >>] as UI
-  frame "User Interface"{
-  [UI] as UI
-  [UI \nEngine] as UIE
-  }
-  frame "DB Manager" as DBM{
-  [Query\nParser] as QP
-  [Response\nParser] as RP
-  }
-  frame "Comm Manager" as CM{
-  [Comm \nStatus] as RCS
-  [RC\nTx] as RCT
-  [RC\nRx] as RCR
-  }
-  [RC Rx\nParser] as RCRP
-  frame "Remote \nController" as REMCTL{
-  [Cmd \nParser] as RCCP
-  }
+'' ------- defining elements --------
+abstract        abstract
+abstract class  "abstract class"
+annotation      annotation
+circle          circle
+()              circle_short_form
+class           class
+diamond         diamond
+<>              diamond_short_form
+entity          entity
+enum            enum
+interface       interface
+''structure struct
+class structName << struct >>
+'' ------------------------------
+
+'' ---------- Relation between classes -----------
+'' Types
+'' - extension (inheritance):   <|--
+'' - composition: *--
+'' - Aggregation: o--
+'' To have a dotted line, replace -- by ..
+'' relation syntax
+''  <C1Name> "<cardC1>" <relation> "<cardC2>" <C2Name> : <label>
+Class01 "1" *-- "many" Class02 : contains
+Class03 o-- Class04 : aggregation
+Class05 --> "1" Class06
+'' --------------------------------------
+
+'' -------------- Scope ---------------
+'' 
+'' 1) - : private
+'' 2) # : protected
+'' 3) ~ : package private
+'' 4) + : public 
+'' remove attributes and methods icons
+skinparam classAttributeIconSize 0
+class Dummy {
+ -field1
+ #field2
+ ~method1()
+ +method2()
 }
-
-'' ----------- INTERACTIONS
-'' MDO-RC
-[User] .d..> [UI]: presses
-[UI] .u..> [User]: feedback
-[UI] --> [UIE]: UI events
-[UIE] --> [UI]: updates
-[UIE] --> [QP]: build db \nquery
-[UIE] --> [RCT]: admin\n cmd
-[UIE] --> [RCS]: status
-[RCS] --> [UIE]: status
-[RCS] --> [RCT]: ping
-[QP] --> [UIE]: status
-[QP] --> [RCT]: db query \nframe
-[RCR] ..> [RCRP]: rx frame
-[RCRP] ..> [RP]: db response \nframe
-[RCRP] ..> [RCCP]: cmd \nresponse
-[RCCP] ..> [UIE]: cmd \nfeedback
-[RP] --> [UIE]: db response
-
-package "MDO-RS: AppManager"{
-  ''HTTP - [UI]
-  frame "Comm Manager" as CMS{
-  ''together{
-  [Comm \nStatus] as RSS
-  [RS Tx \nClient] as RSTC
-  [RS Rx \nClient] as RSRC
-  ''[RS Tx \nLocal] as RSTL
-  ''[RS Rx \nLocal] as RSRL
-  ''}
-  }
-}
-'' ----------- INTERFACES
-() "tcp/ip" as sockRC_RS
-() "tcp/ip" as sockRS_RC
-
-'' MDO-RS
-'' Client Connections
-[RCT] .r.> sockRC_RS
-sockRC_RS .d.> [RSRC]: send server\nframe
-[RSTC] .u.> sockRS_RC
-sockRS_RC .l.> [RCR]: send client\n frame
 
 @enduml
   #+END_SRC
+
+  #+RESULTS:
+  [[file:diags/plantuml/class-diag/output/class-diag-rc.png]]
+
 *** Deployment diagrams
 In UML, deployment diagrams model the physical architecture of a system. Deployment diagrams show the relationships between the software and hardware components in the system and the physical distribution of the processing.
 
